-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.3.0
-
None
-
3
-
4049
From the osd layer, it seems that dt_device::dd_lu_dev::ld_obd points to an uninitialized obd device which isn't the one created from configuration logs. For instance, all error messages in lustre/osd-ldiskfs/osd_handler.c using the prefix ("%s: ...", dev->od_dt_dev.dd_lu_dev.ld_obd->obd_name) now prints "(null): ....".
It seems that the lu devices are now configured directly from the mdt (see mdt_stack_init()), but they don't seem to point to any valid obd. I guess the intent is to get rid off obd_device in the end, but this should probably be replaced by some common structure where the device can find its service name (or the osd device should record its service name as on orion).