LU-1574 osd: don't use obd_name but od_svname in error messages

obd_name is not initialized in OSD, but there is od_svname in
osd_device to be used instead.

Signed-off-by: Mikhail Pershin <tappro@whamcloud.com>
Change-Id: I87a83badc358ad508ecb8a4e593a7e744277e57f
Reviewed-on: http://review.whamcloud.com/4165
Tested-by: Hudson
Reviewed-by: Johann Lombardi <johann.lombardi@intel.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>